# olap-demos

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION_COMPLIANCE.md  README.md  pyproject.toml  pytest.ini
.specify/memory/: constitution.md
benchmark-results/: README.md
benchmark-results/baseline/: benchmarks.json
docs/: architecture.md  query-catalog.md
specs/001-olap-core-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-olap-core-demo/checklists/: requirements.md
specs/001-olap-core-demo/contracts/: cli-interface.md  query-patterns.md
src/: __init__.py
src/cli/: __init__.py  analyze.py  benchmark.py  generate.py
src/datagen/: __init__.py  generator.py  schemas.py
src/models/: __init__.py  dimensions.py  facts.py
src/query/: __init__.py  connection.py  duckdb_loader.py  executor.py  formatter.py  patterns.py  profiler.py
src/storage/: __init__.py  csv_handler.py  parquet_handler.py  partition_manager.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_aggregations.py  test_query_performance.py  test_scalability.py  test_storage.py  test_window_functions.py
tests/integration/: __init__.py  test_data_generation.py  test_end_to_end.py  test_partitioning.py
tests/unit/: __init__.py  test_generators.py  test_models.py  test_profiler.py  test_storage.py
